--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -51,7 +51,7 @@ We noted above that a name and a definite description might have very different 
 
 \section{A Word on Domains and Extensions}
 
-We always start our symbolisation keys by specifying a domain, and with extensions in view we can see why this is important. If we are to interpret an expression in terms of what it applies to, then we are going to need to know what things are `out there' for it to apply to. As we said before (§\ref{sec_domains}), the only restriction we place on our domains is that they be nonempty collections of things. But every extension we assign will be drawn from the domain: every name will be a member of the domain, and every one-place predicate will be assigned some sub-collection (`subset') of the domain. 
+We always start our symbolisation keys by specifying a domain, and with extensions in view we can see why this is important. If we are to interpret an expression in terms of what it applies to, then we are going to need to know what things are `out there' for it to apply to. As we said before (§\ref{sec_domains}), the only restriction we place on our domains is that they be nonempty collections of things. But every extension we assign will be drawn from the domain: every name will be a member of the domain, and every one-place predicate will be assigned some things drawn from the domain. 
 
 We can stipulate directly which things in our domain our predicates are to be true of. So it is worth noting that our stipulations can be as \emph{arbitrary} as we like. For example, we could stipulate that `$H$' should be true of, and only of, the following objects:
 	\begin{center}
@@ -69,7 +69,7 @@ Then `$Hd$' and `$Hp$' will both be true, on this interpretation, but `$Hn$' wil
 
 This process of explicit stipulation is just giving the extension of a predicate by a list of items falling under it. A more common way of identifying the extension of a predicate is to derive it from a classification rule that sorts everything into those items that fall under it and those that do not. Such a classification rule is often what people think of as the meaning of a predicate. But such a classification rule goes beyond the extension. In effect, our earlier symbolisation keys assign an extension by relying on our knowledge of the classification rule associated with English predicates. While the rule might determine the extension in a domain, it is not the extension: two different rules could come up with the same extension, as in the case of monotremes earlier. 
 
-The extension of a one-place predicate is just a set of things. A set is identified by its members, so that set will be the same in every domain which contains all of its members. But we can see a further difference between extensions and classification rules when we can consider applying the same rule in different domains. So the classification rule associated with the English predicate `\gap{} is a student' applies to many many people in the domain of all people. In the domain `people in this class', it applies only to a select few. In fact, you can even use the classification rule `\gap{} is a student' to fix an extension where the domain doesn't include any students at all. In that case it will just yield an \define{empty extension} – one containing nothing. Here are some other cases where the empty extension should be assigned to a predicate:  \begin{itemize}
+The extension of a one-place predicate is just some things. We can identify them by simply listing them. A list like that isn't anything more than the items in the list, so that list will be the same in every domain which contains those things in the extension. But we can see a further difference between extensions and classification rules when we can consider applying the same rule in different domains. So the classification rule associated with the English predicate `\gap{} is a student' applies to many many people in the domain of all people. In the domain `people in this class', it applies only to a select few. In fact, you can even use the classification rule `\gap{} is a student' to fix an extension where the domain doesn't include any students at all. In that case it will just yield an \define{empty extension} – one containing nothing. Here are some other cases where the empty extension should be assigned to a predicate:  \begin{itemize}
 	\item `\gap{1} is a round square' (in any domain), or
 	\item  `\gap{1} is a horse' in the domain of sheep, or
 	\item `\gap{1} is divisible without remainder by \gap{2}' in the domain of prime numbers (where the number $1$ isn't normally thought to be a prime).
@@ -186,13 +186,13 @@ Let's therefore make the assumption that interpretations are not restricted to a
 
 \section{Predicates, Properties, and Relations}\label{predrel}
 
-A feature that might be shared by a number of different things is called a \define{property}. These can be physical features like the property \emph{being red}, or the property \emph{having a mass of 2kg}; but we can also consider other properties that have a more social or mental basis, such as \emph{being a logician}, \emph{being rich}, or \emph{being annoying}. In many cases, a property will determine an extension, because we can think of the property as dividing the domain in two: into a collection of things in the domain having a certain feature, and those lacking it. As the extension of a one-place predicate is a collection of things, the collection of things with a certain feature can correspond to an extension of a predicate. In that case we might say that the predicate represents the property. So on the domain of people, the collection of people who have the property of being a logician is an extension, and we can offer an interpretation on which this extension is assigned to some one-place predicate.
+A feature that might be shared by a number of different things is called a \define{property}. These can be physical features like the property \emph{being red}, or the property \emph{having a mass of 2kg}; but we can also consider other properties that have a more social or mental basis, such as \emph{being a logician}, \emph{being rich}, or \emph{being annoying}. In many cases, a property will determine an extension, because we can think of the property as dividing the domain in two: into those things in the domain having a certain feature, and those lacking it. As the extension of a one-place predicate is some things, the things with a certain feature can correspond to an extension of a predicate. In that case we might say that the predicate represents the property. So on the domain of people, those people who have the property \emph{being a logician} is an extension, and we can offer an interpretation on which this extension is assigned to some one-place predicate.
 
-We have to be careful about this though, for several reasons. The first is that a property is a way for something to be, independent of the domain in which it might be included. An extension by contrast is defined as a subset of the domain. So a property might determine an extension, given a domain, but we should not take it to \emph{be} an extension. Likewise, we should not understand the symbolisation key as assigning a property as the \emph{meaning} of a predicate. Recalling §\ref{ss.int}, we might understand a symbolisation key as associate a \FOL\ predicate with a property as expressed by an English predicate. But this is just a means to assign an extension to the predicate, using the property as a classification of the domain. 
+We have to be careful about this though, for several reasons. The first is that a property is a way for something to be, independent of the domain in which it might be included. An extension by contrast is simply some things drawn from a given domain. So a property might determine an extension in a domain, but we should not take it to \emph{be} an extension. Likewise, we should not understand the symbolisation key as assigning a property as the \emph{meaning} of a predicate. Recalling §\ref{ss.int}, we might understand a symbolisation key as associate a \FOL\ predicate with a property as expressed by an English predicate. But this is just a means to assign an extension to the predicate, using the property as a classification of the domain. 
 
 Another reason to hesitate in taking extensions to be properties is that, depending on the domain, many distinct properties will have the same extension. Consider the ratites, the bird family including ostriches, emus, cassowaries, and kiwis, among others. All living ratites are unable to fly. So on the domain of ratites, the property \emph{being a bird} determines the same extension as the property \emph{being flightless}. Suppose some predicate `$F$' is assigned this extension. If an extension is a property, then we'd have to say that extension is both \emph{is a bird} and \emph{is flightless} – but since those two are distinct, the extension cannot be both, and in fact it is clear that it cannot be either.\footnote{These properties are coextensive on this domain, but not in general. But some properties seem to be necessarily coextensive: take the properties \emph{being a plane figure with three sides} and \emph{being a plane figure with three vertices}. At first glance these are different properties – one involves counting lines, the other counting angles.}
 
-A final reason for caution is that many legitimate extensions don't seem to correspond to genuine properties. It is hard to characterise the distinction between genuine properties and the others, but one idea is that genuine properties contribute to \emph{resemblance}. If two things are both red, then they resemble one another in appearance. But any subset of a domain is an extension, and we can imagine just selecting things almost at random to form an extension, which can then be assigned to a predicate. But there need be nothing those things have in common just because they are in the same set. Suppose I toss a coin ten times, and determine an extension by selecting $n$ from the domain of natural numbers if the $n$-th toss was heads. The extension I get is: $1, 3, 4, 5, 7$. But clearly nothing in this recipe means this extension corresponds to a genuine property. Nothing in \FOL\ requires that predicates must have genuine properties determining their extensions.  
+A final reason for caution is that many legitimate extensions don't seem to correspond to genuine properties. It is hard to characterise the distinction between genuine properties and the others, but one idea is that genuine properties contribute to \emph{resemblance}. If two things are both red, then they resemble one another in appearance. But any things from a domain can form an extension, and we can imagine just selecting things, which can then be assigned to a predicate. In that case there is unlikely to be anything those things have in common just because they belong to an extension. Suppose I toss a coin ten times, and determine an extension by selecting $n$ from the domain of natural numbers if the $n$-th toss was heads. The extension I get is: $1, 3, 4, 5, 7$. But clearly nothing in this recipe means this extension corresponds to a genuine property. Nothing in \FOL\ requires that predicates must have genuine (i.e., resemblance-grounding) properties determining their extensions.  
 
 Properties determine extensions for one-place predicates. The corresponding entity determining the extension of a many-place predicate is a \define{relation}. So the relation of \emph{loving} on a domain determines an extension, a set of pairs from the domain standing in that relation. The same caveats apply as in the case of properties: we shouldn't take \FOL\ predicates to have relations as their meaning, we shouldn't identify a relation with its extension, and we shouldn't take any extension to correspond to a genuine relation.
 
@@ -200,7 +200,7 @@ Properties determine extensions for one-place predicates. The corresponding enti
 
 One way of presenting an interpretation that is often convenient is to present its extensions \emph{diagrammatically}.
 
-The definition of an interpretation in §\ref{ss.int} entailed that a one-place predicate should have as its extension a collection of things drawn from the domain. That is, the extension of a predicate is a \define{subset} of the domain. We can represent subsets graphically using a \define{Euler diagram}, without having to specify each of the items which is in the domain.
+The definition of an interpretation in §\ref{ss.int} entailed that a one-place predicate should have as its extension a collection of things drawn from the domain. If we help ourselves to the resources of set theory, the mathematical theory that treats collections and groups, then the extension of a predicate is a \define{subset} of the domain. The subsets of a given set $X$ are those sets such that everything in them is also in $X$. (So the set of children is a subset of the set of people – every member of the former is a member of the latter.) We can represent subsets graphically using a \define{Euler diagram}, without having to specify each of the items which is in the domain.
 
 We begin by demarcating a region on the page to represent the domain – typically, a rectangle. Then for each one-place predicate, we can represent it by a sub-region of the domain, subject to the following rules: \begin{itemize}
 \item The interior of a region associated with predicate $\meta{P}$ represents the members of the domain that are in the extension of $\meta{P}$; the exterior – the region within the domain but outside the given region – represents those members of the domain that are not in the extension of $\meta{P}$;
@@ -217,7 +217,7 @@ These rules are quite abstract, but they are easy to apply in practice. Suppose 
 \end{ekey}
 We may represent this interpretation as in Figure~\ref{fig:egglayers}. \begin{figure}
 	\begin{tikzpicture}
-		\draw[thick] (0,0) -- (0,4) -- (6,4) -- (6,0) -- cycle;
+		\draw[thick, rounded corners] (0,0) rectangle (5.5,4);
 		\node (a) at (1,0.5) {Animals};
 		\node (e) at (3,2) {Egg-layers};
 		\node (b) at (3,1) {Birds};
@@ -238,7 +238,7 @@ Another example. Consider this interpretation, discussed earlier on page \pagere
 	\end{ekey}
 The wisdom of Bret Michaels then tells us that the Euler diagram should look like the representation in Figure~\ref{fig:poison}. \begin{figure}[b]
 	\begin{tikzpicture}
-		\draw[thick] (0,0) -- (0,4) -- (7,4) -- (7,0) -- cycle;
+		\draw[thick, rounded corners] (0,0) rectangle (7,4.2);
 		\node (s) at (2,2) {sad song singers};
 		\node (t) at (5,2) {thorn-havers};
 		\node (c) at (2,1.1) {cowboys};
@@ -252,7 +252,7 @@ The wisdom of Bret Michaels then tells us that the Euler diagram should look lik
 
 We can start to see how interpretations can help us evaluate arguments quite vividly in this graphical environment. Recall this example from §\ref{s:FOLBuildingBlocks}: `Willard (`$w$') is a logician (`$L$'); Every logician wears a funny hat (`$F$') \ttherefore\ Willard wears a funny hat'.  This can be represented using an Euler diagram making use of a labelled dot to represent the individual Willard, as in Figure~\ref{fig:willard}. We can see from the diagram that this argument is valid: Willard falls in the region corresponding to `$F$' because he falls in the region corresponding to `$L$', which is wholly within the `$F$'-region. \begin{figure}
              \begin{tikzpicture}
-              	\draw[thick] (0,0) -- (0,4) -- (5,4) -- (5,0) -- cycle;
+              	\draw[thick, rounded corners] (0,0) rectangle (5.7,4);
 		\node (a) at (1,0.5) {People};
 		\node (e) at (2,1.4) {$L$};
 		\node (b) at (4,2.5) {$F$};
@@ -490,7 +490,7 @@ An order, as the name suggests, gives a particular kind of structure to a domain
 
 If not everything in the domain is ordered with respect to each other, the relation is partial. Perhaps not everything in the domain is comparable. Suppose we are considering a railway network, in which all lines radiate from a central station, like the Adelaide Metro network.  The relation `\gap{1} is no further along the line than \gap{2}' is a partial order.\footnote{Every station is no further along than itself; pick any two distinct stations, such as Woodville and Kilkenny: if Kilkenny is no further along than Woodville, then Woodville is further along than Kilkenny; and if we pick three stations, such as Oaklands, Brighton and Seacliff, then since Oaklands is no further than Brighton, and Bright is no further than Seacliff, it follows that Oaklands is no further than Seacliff.} But there are many pairs of incomparable stations: Woodville is not on the same line as Oaklands, so neither is further along the line than the other. (We could create a total order, perhaps by measuring distance or counting stations along the line, and say that two stations are equally far away iff they are the same number of stops from Adelaide. But we are focussed here on the partial order induced by the actual railway network.) A strict partial order would be `\gap{1} is further along the line than \gap{2}', which excludes ties. 
 
-A mathematical example of a partial order is the \define{subset} relation $\subseteq$. Consider some set $X$ which contains just $a$ and $b$ as members. The subsets of a given set $X$ are those sets such that everything in them is also in $X$. So $X$ is itself a subset of $X$; so is the set just containing $a$, and the set just containing $b$. Finally, the empty set (with no members) obviously is a subset of any set (everything in it is – trivially! – in every other set). That gives the structure of subsets depicted in Figure~\ref{fig:sbst}. The corresponding strict partial order $\subset$ results from removing any loops from a set to itself in that diagram.
+A mathematical example of a partial order is the subset relation $\subseteq$. Consider some set $X$ which contains just $a$ and $b$ as members. Recall from §\ref{euler} that the subsets of a given set $X$ are those sets such that everything in them is also in $X$. So $X$ is itself a subset of $X$; so is the set just containing $a$, and the set just containing $b$. Finally, the empty set (with no members) obviously is a subset of any set (everything in it is – trivially! – in every other set). That gives the structure of subsets depicted in Figure~\ref{fig:sbst}. The corresponding strict partial order $\subset$ results from removing any loops from a set to itself in that diagram.
  \begin{figure}[t]
  \begin{tikzpicture}
  \node (ab) at (3,3) {$\{a,b\}$};
@@ -1184,16 +1184,16 @@ Again, I want to show that this is invalid. To do this, we must make the premise
 	\end{ekey}
 The premise is clearly true on this interpretation. Anyone in the domain has a living sibling. That sibling will also, then, be in the domain, because one cannot be someone's sibling without also having  them as a sibling. So for everyone in the domain, there will be at least one other person in the domain who is their sibling, and thus has a parent in common with them. Hence `$\forall x \exists y Lxy$' is true. But the conclusion is clearly false, for that would require that there is some single person who shares a parent with everyone in the domain, and there is no such person. So the argument is invalid. We observe immediately that the sentences `$\forall x \exists y Lxy$' and `$\enot\exists y \forall x Lxy$' are jointly consistent and that `$\forall x \exists y Lxy$' does not entail `$\exists y \forall x Lxy$'. 
 
-For my third example, I shall mix things up a bit. In §\ref{s:Interpretations}, I described how we can present some interpretations using diagrams. For example:
+For my third example, I will mix things up a bit. In §\ref{s:Interpretations}, I described how we can present some interpretations using diagrams. For example:
 \begin{center}
 \begin{tikzpicture}
-\node (atom1) at (0,2) {1};
-\node (atom2) at (2,2) {2};
+\node (atom1) at (0,1.5) {1};
+\node (atom2) at (2,1.5) {2};
 \node (atom3) at (2,0) {3};
-\draw[->, thick] (atom1)--(atom2);
-\draw[->, thick] (atom1)--(atom3);
+\draw[->, thick] (atom1) .. controls (1,1.75) .. (atom2);
+\draw[->, thick] (atom1) .. controls (1,0.5) .. (atom3);
 \draw[->, thick] (atom1)+(-0.15,0.15) arc (-330:-30:.3); 
-\draw[->, thick] (atom2) -- (atom3);
+\draw[->, thick] (atom2)  .. controls (2.2,0.75) .. (atom3);
 \end{tikzpicture}
 \end{center}
 Using the conventions employed in §\ref{s:Interpretations}, the domain of this interpretation is the first three positive whole numbers, and `$R$' is true of \meta{x} and \meta{y} just in case there is an arrow from \meta{x} to \meta{y} in our diagram. Here are some sentences that the interpretation makes true:
