tweak title design

--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -8,7 +8,7 @@
 ~\\[2cm]
 \noindent \makebox[6cm]{\begin{minipage}{7cm}
 	 \begin{flushright}
-	{\color{orange}\resizebox{!}{3em}{\forallx}}\par{\Huge\textsc{Adelaide}}
+	{\color{orange}\resizebox{!}{3em}{\forallx}}\par{\Huge\textsc{Adelaide\phantom{x}}}
 \end{flushright}\end{minipage}}
 
 \vfill
